--- a/appsettings.json
+++ b/appsettings.json
@@ -2,8 +2,14 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information",
+      "Microsoft.EntityFrameworkCore.Query": "Information",
+      "Microsoft.EntityFrameworkCoreDatabase.Command": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AppMvcConnectionString": "Data Source=localhost,3302; Initial Catalog=appmvc; User ID=SA;Password=Password123;TrustServerCertificate=True;"
+  }
 }
