--- a/appsettings.json
+++ b/appsettings.json
@@ -10,6 +10,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AppMvcConnectionString": "Data Source=localhost,3302; Initial Catalog=appmvc; User ID=SA;Password=Password123;TrustServerCertificate=True;"
+    "AppMvcConnectionString": "Data Source=localhost,3302; Initial Catalog=appmvc; User ID=SA;Password=Password123;TrustServerCertificate=True;",
+    "AppDbContext": "Server=(localdb)\\mssqllocaldb;Database=AppDbContext-34a2f394-308d-4e2f-b142-a70e4b0b7b8e;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
